<resources>

    <string name="app_name">LetsRace CAR</string>
    <string name="app_name_version">LetsRace CAR 1.0</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">LetsRace CAR</string>
    <string name="title_activity_accelerometer">LetsRace CAR - Accelerometer control</string>
    <string name="title_activity_mcu">LetsRace CAR - MCU settings</string>
    <string name="title_activity_about">LetsRace CAR - About</string>
    <string name="info_text">Tilt your Android device</string>
    <string name="txtview_response">Response</string>
    <string name="edittxt_port1">1111</string>
    <string name="edittxt_port2">2222</string>
    <string name="edittxt_port3">3333</string>
    <string name="edittxt_address">192.168.43.11</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_accel">Accelerometer control</string>
    <string name="btn_mcu">MCU settings</string>
    <string name="btn_about">About</string>
    <string name="forward">forward</string>
    <string name="backward">backward</string>
    <string name="text_about">The latest versions of the software and source code is still under development</string>
    <string name="mcu_textInfo1">Settings for the MCU. The parameters are transferred and stored in the MCU EEPROM memory</string>
    <string name="mcu_textStop">Stop when the connection is lost:</string>
    <string name="mcu_cBox_AutoOFF">On</string>
    <string name="mcu_after_sec">After (second):</string>
    <string name="mcu_flash_Read">Read data</string>
    <string name="mcu_flash_Write">Write data</string>
    <string name="mcu_error_range">Enter the correct value (0.01 &#8211; 99.9)</string>
    <string name="err_data_entry">Data entry error</string>
    <string name="flash_success">Data successfully written in Flash</string>
    <string name="error_get_data">Data receive error</string>
    <string name="default_bluetooth">20:16:03:04:31:49</string>
    <string name="default_commandHorn">H</string>
    <string name="default_pwmBtnMotorLeft">255</string>
    <string name="default_pwmBtnMotorRight">255</string>
    <string name="default_xRperc">60</string>

</resources>